# MillerInc.PhysicsEngine

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  PhysicsEngine.sln  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters  PhysicsEngineGPU.vcxproj  PhysicsEngineGPU.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  configure
.github/workflows/: c-cpp.yml
GPU/CUDA.Physics/: CUDA.Physics.sln  CUDA.Physics.vcxproj  kernel.cu  kernel.h
GPU/CUDA.Physics/CUDA.Physics/x64/Debug/: CUDA.Physics.exe.recipe  CUDA.Physics.ilk  kernel.cu.cache  kernel.cu993151299.deps
GPU/CUDA.Physics/CUDA.Physics/x64/Debug/CUDA.Physics.tlog/: CUDA.Physics.lastbuildstate  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  link.command.1.tlog  link.read.2.tlog  link.secondary.1.tlog  link.write.1.tlog
GPU/CUDA.Physics/x64/Debug/: CUDA.Physics.exp  CUDA.Physics.lib
GPU/Cuda-Engine/: gpuScene.cu  gpuScene.h
GPU/Cuda-Engine/Math/: Vector3Math.cu
include/: CrossPlatformMacros.h  FullEngineIncludes.h  GPU-Macros.h  GeneralTypes.h  library.h
include/BasePhysics/: MBounds.h  MObject.h
include/FieldTypes/BaseTypes/: Quaternion.h  Vector3.h  Vector3Math.h
include/FieldTypes/ComplexTypes/: ContactForce.h  Force.h  PosVariableForce.h
include/FieldTypes/ComplexTypes/PositionForces/: DragForce.h  GravityForce.h  SpringForce.h
include/General/: Quaternion.h  Vector.h
include/PhysicsEngine/Scenes/: Scene.h
include/PhysicsObjects/: BaseObject.h
include/PhysicsObjects/Collidables/: CollisionObject.h  ImpulseObject.h
include/PhysicsObjects/Collidables/SimpleShapes/: Cube.h  FlatSheet.h  Sphere.h
include/Rendering/Shared/GPU/NVIDIA/: GPUScene.h  gpu_kernels.cu  gpu_kernels.exp  gpu_kernels.h  gpu_kernels.lib
include/Rendering/Windows/CPU/: visualizer.h  visualizer.ui
include/SimulationTypes/: EventTypes.h
source/: library.cpp
source/BasePhysics/: MBounds.cpp  MObject.cpp
source/FieldTypes/BaseTypes/: Quaternion.cpp  Vector3.cpp  Vector3Math.cpp
source/FieldTypes/ComplexTypes/: ContactForce.cpp  Force.cpp
source/FieldTypes/ComplexTypes/PositionForces/: DragForce.cpp  GravityForce.cpp  SpringForce.cpp
source/General/: Quaternion.cpp  Vector.cpp
source/PhysicsEngine/Scenes/: Scene.cpp
source/PhysicsObjects/: BaseObject.cpp
source/PhysicsObjects/Collidables/: CollisionObject.cpp  ImpulseObject.cpp
source/PhysicsObjects/Collidables/SimpleShapes/: Cube.cpp  FlatSheet.cpp  Sphere.cpp
source/Rendering/Shared/GPU/NVIDIA/: GPUScene.cpp
source/Rendering/Windows/CPU/: visualizer.cpp
